# parser-bot

./: pyproject.toml
src/: bot.py  lifespan.py  main.py
src/core/: config.py
src/markups/: reply_keybords.py
src/routers/: __init__.py  user_handlers.py
src/routers/callbacks/: __init__.py  job_callback_handlers.py
src/utils/: logger.py  parser.py  pay_details.py  payment.py  payment_manager.py  storage.py
