[project]
name = "parser-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Krushovice",email = "kickstar69@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
